--- a/README.rdoc
+++ b/README.rdoc
@@ -13,37 +13,37 @@
 == SYNOPSIS:
 
 simple.rb: 
-beamer_document :author => "Tejas Dinkar",
-                :date => "Today",
-                :title => "An Example",
-                :theme => "Warsaw",
-                :disable_navigation => true do
-
-    title_frame
-
-    frame "A Sample Slide" do
-        text {"An Itemized List:"}
-
-        itemized_list do
-            item "Itemized Item 1"
-            item "Itemized Item 2", :on => "2-"
-            item "Itemized Item 3", :on => "3-"
-        end
-
-        vspace{"2cm"}
-
-        block "A Simple Theorem" do
-            "In a right triangle, the square of hypotenuse equals the sum of squares of two other sides"
-        end
-    end
-end
+ beamer_document :author => "Tejas Dinkar",
+                 :date => "Today",
+                 :title => "An Example",
+                 :theme => "Warsaw",
+                 :disable_navigation => true do
+ 
+     title_frame
+ 
+     frame "A Sample Slide" do
+         text {"An Itemized List:"}
+ 
+         itemized_list do
+             item "Itemized Item 1"
+             item "Itemized Item 2", :on => "2-"
+             item "Itemized Item 3", :on => "3-"
+         end
+ 
+         vspace{"2cm"}
+ 
+         block "A Simple Theorem" do
+             "In a right triangle, the square of hypotenuse equals the sum of squares of two other sides"
+         end
+     end
+ end
 
 $ rubylatex simple.rb | pdflatex
 $ okular texput.pdf
 
 == REQUIREMENTS:
 
-* To be able to create any tex document from ruby like code
+* latex
 
 == INSTALL:
 
